wizard color and align fix

--- a/src/assets/sass/layout/_wizard.scss
+++ b/src/assets/sass/layout/_wizard.scss
@@ -115,7 +115,7 @@
                 }
 
                 .content {
-                    button{
+                    .continue-button {
                         background-color: #2e6da4;
                         margin-bottom: 10px;
                     }
@@ -245,7 +245,7 @@
                         }
 
                         .checkbox{
-                            margin-bottom: 10px;
+                            margin-bottom: 20px;
 
                             label{
                                 color: #999999;
